--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-asgiref==3.7.2
-Django==5.0.1
-fontawesome==5.10.1.post1
-fontawesomefree==6.5.1
-pillow==10.3.0
-sqlparse==0.4.4
-typing_extensions==4.9.0
-tzdata==2023.4
+asgiref==3.8.1
+dj-database-url==2.1.0
+Django==5.0.4
+django-on-heroku==1.1.2
+psycopg2-binary==2.9.9
+sqlparse==0.5.0
+typing_extensions==4.11.0
+tzdata==2024.1
+whitenoise==6.6.0
